cambios 08-03-2022 - intentando correr todo con docker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3.8'
 services:
   web:
     build: ./app
+    container_name: Django
     command: python manage.py runserver 0.0.0.0:8000
     volumes:
       - ./app/:/usr/src/app/
@@ -14,6 +15,7 @@ services:
       - db
   db:
     image: postgres:13.0-alpine
+    container_name: postgres
     volumes:
       - postgres_data:/var/lib/postgresql/data/
     environment:
@@ -27,10 +29,12 @@ services:
     ports:
       - 15670:15670
   rabbitmq:
-    image: rabbitmq
+    build: ./RabbitMQ
     container_name: rabbitmq
+    
     ports:
       - 5673:5672
+      - 15673:15672
 
 
 
