Programa basico funcional

--- a/RabbitMQ/Dockerfile
+++ b/RabbitMQ/Dockerfile
@@ -2,7 +2,7 @@ FROM rabbitmq:management
 
 # Define environment variables.
 ENV RABBITMQ_DEFAULT_USER USV-Project
-ENV RABBITMQ_DEFAULT_PASS USV$ADMIN
+ENV RABBITMQ_DEFAULT_PASS USV1234
 
 ADD init.sh /init.sh
 
